# Computer-Vision-Playground

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  index.html  params.json  perf.data
Debug/: OpenCV-Playground  OpenCV-Playground-Debug  Sandbox.d  makefile  objects.mk  sources.mk
Debug/src/: Sandbox.d  subdir.mk
Debug/src/OpenCL-Common/: common.d  image.d  subdir.mk
Release/: OpenCV-Playground-Release  Sandbox.d
src/: BGRtoGray.cl  Convolution.cl  Nebula.cl  OpenCL-Common.h  Sandbox.cpp  SystechDefinitions.h  v4l-wrapper.cpp  v4l-wrapper.hpp
src/OpenCL-Common/: Makefile  OpenCL-Common.h  OpenCL-Common.h~
